Add content about eager execution

--- a/Tutorial 1.ipynb
+++ b/Tutorial 1.ipynb
@@ -1,15 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ! pip install tensorflow --upgrade"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Keras** is an open-source software library that provides a Python interface for artificial neural networks. Keras acts as an interface for the TensorFlow library. [Wiki](https://en.wikipedia.org/wiki/Keras)"
+    "**TensorFlow** is a free and open-source software library for machine learning.\n",
+    "\n",
+    "**Keras** is a deep learning API written in Python, running on top of the machine learning platform TensorFlow.\n",
+    "\n",
+    "## History between Keras and TensorFlow:\n",
+    "\n",
+    "- Keras was first developed by Francois Chollet for his own reserach in March 27th, 2015. Back then, TensorFlow hasn't been developed. There weren't too many deep learning libraries available - the popular ones included Torch, Theano, and Caffe. \n",
+    "- In order to train the neural networks, Keras required a **backend** (computational engine). Keras's default backend was Theano until v1.1.0. At the same time, Google released TensorFlow. Keras started supporting it as a backend, and became the default starting from the release of Keras v1.1.0.\n",
+    "     - Keras started making TensorFlow default due to its popularity; and TensorFlow users were also becoming increasingly drawn to the simplicity of the high-level Keras API.\n",
+    "- Google announced TensorFlow 2.0 in June 2019, they declared that Keras is now the official high-level API of TensorFlow.\n",
+    "\n",
+    "[Link](https://www.pyimagesearch.com/2019/10/21/keras-vs-tf-keras-whats-the-difference-in-tensorflow-2-0/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -36,22 +56,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TF \\& Keras"
+    "## Keras and tf.keras\n",
+    "\n",
+    "- tf.keras submodule was introduced in TensorFlow v1.10.0, integrating Keras directly within TensorFlow package itself.\n",
+    "- Release of Keras 2.3.0: \n",
+    "     - It is the first release of Keras that brings the Keras package in sync with tf.keras\n",
+    "     - It is the final release of Keras that will support multiple backends \n",
+    "     - The keras package will only support bug fixes. Developers should start using tf.keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.keras == keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +99,7 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +132,283 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# variables"
+    "# Eager Execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/eager-execution-vs-graph-execution-which-is-better-38162ea4dbf6\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "no session\n",
+    "\n",
+    "no initialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.youtube.com/watch?v=Up9CvRLIIIw\n",
+    "\n",
+    "@tf.function\n",
+    "\n",
+    "a.assign\n",
+    "a.assign_add"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eager execution is a powerful execution environment that evaluates operations immediately. It does not build graphs, and the operations return actual values instead of computational graphs to run later. With Eager execution, TensorFlow calculates the values of tensors as they occur in your code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In Tensorflow 2.0, eager execution is enabled by default.\n",
+    "tf.executing_eagerly()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, [[4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [[2.]]\n",
+    "m = tf.matmul(x,x)\n",
+    "print(\"hello, {}\".format(m))     #Return results immediately "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In TensorFlow1.x, the above code will return:\n",
+    "\n",
+    "      hello, Tensor(\"MatMul:0\", shape=(1, 1), dtype=float32)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eager execution\n",
+    "\n",
+    "<font color= red>Easy-to-build\\&test</font>\n",
+    "\n",
+    "Eager execution is easy to implement, and simplify the model building experience. Advantages of eager execution:\n",
+    "\n",
+    "- **An intuitive interface** with natural Python code and data structures;\n",
+    "- **Easier debugging** with calling operations directly to inspect and test models;\n",
+    "- **Natural control flow** with Python, instead of graph control flow; and\n",
+    "- Support for **GPU & TPU acceleration**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graph execution\n",
+    "\n",
+    "<font color= red>Efficient and fast</font>\n",
+    "\n",
+    "Eager execution is slower than graph execution since eager execution runs all operations one-by-one in Python, it cannot take advantage of potential acceleration opportunities.\n",
+    "\n",
+    "Graphs are easy-to-optimize, simplify arithmetic operations. In graph execution, evaluation of all the operations happens only after we've called our program entirely. So, graph execution is\n",
+    "- **Very Fast**\n",
+    "- **Very Flexible**\n",
+    "- **Runs in parallel**, even in sub-operation level;\n",
+    "- **Very efficient**, on multiple devices\n",
+    "- with **GPU & TPU acceleration** capability\n",
+    "\n",
+    "Graph execution is ideal for large model training. For small model training, beginners, eager execution is better suited."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why TensorFlow adopted Eager Execution?\n",
+    "\n",
+    "- Before version 2.0, TensorFlow prioritized graph execution because it was fast, effiicent, and flexible. But it is difficult to implement.\n",
+    "- PyTorch adopted a different approach and prioritized dynamic computation graphs, which is a similar concept to eager execution. Although they are not that efficient, it is intuitive and easy to implement. Then PyTorch became attractive for the newcommers.\n",
+    "- TensorFlow felt threatened, so the TensorFlow team adopted eager execution as the default execution method, and graph execution is optional.\n",
+    "\n",
+    "In TensorFlow 2.0, you can decorate a Python function using tf.function() to run it as a single graph object. With this new method, you can easily build models and gain all the graph execution benefits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1 2]\n",
+      " [3 4]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = tf.constant([[1,2],[3,4]])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[2 3]\n",
+      " [4 5]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = tf.add(a,1)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 2  6]\n",
+      " [12 20]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  6]\n",
+      " [12 20]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.multiply(a,b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]], dtype=int32)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensors\n",
+    "\n",
+    "- variables\n",
+    "- constant\n",
+    "- Placeholder\n",
+    "- SparseTensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## scalar\n",
+    "string = tf.Variable(\"this is a string\", tf.string) \n",
+    "number = tf.Variable(324, tf.int16)\n",
+    "floating = tf.Variable(3.567, tf.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Variable 'Variable:0' shape=() dtype=int32, numpy=324>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number"
    ]
   },
   {
@@ -145,12 +460,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = tf.ones([1, 2])\n",
-    "# y.numpy()     #no numpy()"
+    "rank1_tensor = tf.Variable([\"Test\"], tf.string) \n",
+    "rank2_tensor = tf.Variable([[\"test\", \"ok\"], [\"test\", \"yes\"]], tf.string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=1>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.rank(rank1_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=0>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.rank(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([2, 2])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank2_tensor.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]], shape=(1, 2, 3), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[[1.]\n",
+      "  [1.]\n",
+      "  [1.]]\n",
+      "\n",
+      " [[1.]\n",
+      "  [1.]\n",
+      "  [1.]]], shape=(2, 3, 1), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]], shape=(3, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor1 = tf.ones([1, 2, 3])  #tf.zeros\n",
+    "print(tensor1)\n",
+    "# y.numpy()     #no numpy()\n",
+    "tensor2 = tf.reshape(tensor1,[2,3,1])\n",
+    "print(tensor2)\n",
+    "tensor3 = tf.reshape(tensor2,[3,-1])\n",
+    "print(tensor3)"
    ]
   },
   {
@@ -162,6 +574,13 @@
     "tf.compat.v1.disable_eager_execution()\n",
     "placeholder"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
