Add a title to Tutorial1

--- a/Tutorial 1.ipynb
+++ b/Tutorial 1.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro to TensorFlow 2.x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1380,7 +1387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## gradient\n",
+    "# gradient\n",
     "\n",
     "[Ref](https://www.tensorflow.org/guide/advanced_autodiff)"
    ]
