Update the title level

--- a/Tutorial2.ipynb
+++ b/Tutorial2.ipynb
@@ -54,7 +54,8 @@
     "\n",
     "https://www.tensorflow.org/api_docs/python/tf/keras/layers/Average#example\n",
     "\n",
-    "Since TensorFlow will randomly initialize all the parameter values when you construct a model, `model.weights` will return different values each time you run it. To initalize the model with the same values, you can use `tf.random.set_seed(1234)` at the begining to"
+    "Since TensorFlow will randomly initialize all the parameter values when you construct a model, `model.weights` will return different values each time you run it. To initalize the model with the same values, you can use `tf.random.set_seed(1234)` at the begining of constructing the model.\n",
+    "https://www.tensorflow.org/api_docs/python/tf/random/set_seed"
    ]
   },
   {
