--- a/Tutorial1.ipynb
+++ b/Tutorial1.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Content\n",
-    "- [Get to Know TensorFlow2.x](#Get-to-Know-TensorFlow2.x)\n",
+    "- [Intro to TensorFlow2.x](#Intro-to-TensorFlow2.x)\n",
     "    - [History between Keras and TensorFlow](#History-between-Keras-and-TensorFlow:)\n",
     "    - [Keras and tf.keras](#Keras-and-tf.keras)\n",
     "- [Eager Execution](#Eager-Execution)\n",
@@ -45,8 +45,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get to Know TensorFlow2.x\n",
-    "\n",
     "**TensorFlow** is an end-to-end framework and platform designed to build and train machine learning models, especially deep learning models.\n",
     "\n",
     "**Keras** is a deep learning API written in Python, running on top of the machine learning platform TensorFlow.\n",
