ones_like, cast, gradient, watch

--- a/Tutorial1.ipynb
+++ b/Tutorial1.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -598,6 +598,85 @@
     "print(t2)\n",
     "print(t3)\n",
     "print(t4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([1 1 1 1 1], shape=(5,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "o = tf.constant([1,2,3,73,2])\n",
+    "print(tf.ones_like(o))     #same shape as o"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(5,), dtype=int32, numpy=array([ 1,  2,  3, 73,  2], dtype=int32)>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.identity(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/job:localhost/replica:0/task:0/device:CPU:0'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "o.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/job:localhost/replica:0/task:0/device:CPU:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## copy tensors to devices\n",
+    "x = tf.random.uniform((3,2))\n",
+    "with tf.device('/cpu:0'):\n",
+    "    x_cpu = tf.identity(x)\n",
+    "print(x_cpu.device)"
    ]
   },
   {
@@ -793,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,6 +880,51 @@
     "                 [6, 8]], dtype=tf.float32)   #if we didn't specify the dtype, it would be tf.int32\n",
     "b = tf.constant([[1, 3], \n",
     "                 [5, 7]], dtype=tf.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 2), dtype=int8, numpy=\n",
+       "array([[2, 4],\n",
+       "       [6, 8]], dtype=int8)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## We cannot change a tensor's dtype with a mutator\n",
+    "## We can only use tf.cast to create a new tensor with the desired data type\n",
+    "\n",
+    "aa = tf.cast(a,dtype=tf.int8)\n",
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 3.  7.]\n",
+      " [11. 15.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.__add__(b))"
    ]
   },
   {
@@ -826,6 +950,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[ 2. 12.]\n",
+      " [30. 56.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.__mul__(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -843,6 +986,25 @@
     "## element-wise multiplication\n",
     "multiply_tensors = tf.multiply(a,b)    #the same with a*b\n",
     "print(multiply_tensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[22. 34.]\n",
+      " [46. 74.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.__matmul__(b))"
    ]
   },
   {
@@ -1220,6 +1382,7 @@
     }
    ],
    "source": [
+    "## variables can be updated with .assign, .assign_add, .assign_sub\n",
     "## assign\n",
     "var_a = tf.Variable([[1.0,2.0],[3.0,4.0]])\n",
     "var_a.assign([[100,200],[300,400]])\n",
@@ -1387,12 +1550,16 @@
    "source": [
     "# gradient\n",
     "\n",
+    "In TensorFlow, we use the `tf.GradientTape` context to trace what's happened inside, so that we can calculate the gradients afterward with the `.gradient()` from the tape object.\n",
+    "\n",
+    "By default, the context will only keep track of the variables but not the tensors, meaning that we can oly ask for gradients with respect to the variables by default (throught the `watch_accessed_variables` argument which defaults to `True`). But we can explicitly ask the tape to watch things for us.\n",
+    "\n",
     "[Ref](https://www.tensorflow.org/guide/advanced_autodiff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1423,10 +1590,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Tensor: shape=(), dtype=float32, numpy=4.0>, <tf.Tensor: shape=(), dtype=float32, numpy=6.0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.Variable(2.0)\n",
+    "y = tf.Variable(3.0)\n",
+    "\n",
+    "with tf.GradientTape() as t:\n",
+    "    f = x * x + y * y\n",
+    "    \n",
+    "print(t.gradient(f,[x,y]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[None, <tf.Tensor: shape=(), dtype=float32, numpy=6.0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Note that once we extracted the gradients from the tape\n",
+    "## the resources it holds will be released\n",
+    "with tf.GradientTape() as t:\n",
+    "    f = x * x + y * y\n",
+    "    \n",
+    "print(t.gradient(f,[x,y]))\n",
+    "# print(t.gradient(f,[x,y]))   #uncomment this line to see the error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Tensor: shape=(), dtype=float32, numpy=4.0>, <tf.Tensor: shape=(), dtype=float32, numpy=6.0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = tf.constant(2.0)\n",
+    "y = tf.Variable(3.0)\n",
+    "\n",
+    "with tf.GradientTape() as t:\n",
+    "    t.watch(x)             #comment this line to see the difference\n",
+    "    f = x * x + y * y\n",
+    "    \n",
+    "print(t.gradient(f,[x,y]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "multiple tapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## we can create a persistent gradient tape object to compute\n",
+    "## multiple gradients and manually release the resources\n",
+    "\n",
+    "x = tf.Variable(2.0)\n",
+    "y = tf.Variable(3.0)\n",
+    "\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    f = x*x+y*y\n",
+    "\n",
+    "dfdx = tape.gradient(f,x)\n",
+    "dfdx2 = tape.gradient(dfdx,x)\n",
+    "print(dfdx)\n",
+    "print(dfdx2)\n",
+    "\n",
+    "del tape"
    ]
   },
   {
