Update gradient part

--- a/Tutorial1.ipynb
+++ b/Tutorial1.ipynb
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,25 +910,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[[ 3.  7.]\n",
-      " [11. 15.]], shape=(2, 2), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a.__add__(b))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -950,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -958,13 +939,13 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[ 2. 12.]\n",
-      " [30. 56.]], shape=(2, 2), dtype=float32)\n"
+      "[[ 3.  7.]\n",
+      " [11. 15.]], shape=(2, 2), dtype=float32)\n"
      ]
     }
    ],
    "source": [
-    "print(a.__mul__(b))"
+    "print(a.__add__(b))"
    ]
   },
   {
@@ -990,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -998,18 +979,18 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[22. 34.]\n",
-      " [46. 74.]], shape=(2, 2), dtype=float32)\n"
+      "[[ 2. 12.]\n",
+      " [30. 56.]], shape=(2, 2), dtype=float32)\n"
      ]
     }
    ],
    "source": [
-    "print(a.__matmul__(b))"
+    "print(a.__mul__(b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1026,6 +1007,44 @@
     "## matrix multiplication\n",
     "matmul_tensors = tf.matmul(a,b)\n",
     "print(matmul_tensors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[22. 34.]\n",
+      " [46. 74.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a @ b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[22. 34.]\n",
+      " [46. 74.]], shape=(2, 2), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.__matmul__(b))"
    ]
   },
   {
@@ -1552,14 +1571,13 @@
     "\n",
     "In TensorFlow, we use the `tf.GradientTape` context to trace what's happened inside, so that we can calculate the gradients afterward with the `.gradient()` from the tape object.\n",
     "\n",
-    "By default, the context will only keep track of the variables but not the tensors, meaning that we can oly ask for gradients with respect to the variables by default (throught the `watch_accessed_variables` argument which defaults to `True`). But we can explicitly ask the tape to watch things for us.\n",
     "\n",
     "[Ref](https://www.tensorflow.org/guide/advanced_autodiff)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1598,7 @@
     "with tf.GradientTape() as t:\n",
     "    x_sq = x * x\n",
     "    with t.stop_recording():  #See Ref for details\n",
-    "        y_sq = y * y\n",
+    "        y_sq = y * y  #not trackable due to stop_recording\n",
     "    z = x_sq + y_sq\n",
     "\n",
     "grad = t.gradient(z, {'x': x, 'y': y})\n",
@@ -1591,14 +1609,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<tf.Tensor: shape=(), dtype=float32, numpy=4.0>, <tf.Tensor: shape=(), dtype=float32, numpy=6.0>]\n"
+      "[<tf.Tensor: shape=(), dtype=float32, numpy=4.0>, None]\n"
      ]
     }
    ],
@@ -1607,9 +1625,12 @@
     "y = tf.Variable(3.0)\n",
     "\n",
     "with tf.GradientTape() as t:\n",
-    "    f = x * x + y * y\n",
+    "    x_sq = x * x\n",
+    "    with t.stop_recording():  \n",
+    "        y_sq = y * y\n",
+    "    z = x_sq + y_sq\n",
     "    \n",
-    "print(t.gradient(f,[x,y]))"
+    "print(t.gradient(z,[x,y]))"
    ]
   },
   {
@@ -1633,6 +1654,13 @@
     "    \n",
     "print(t.gradient(f,[x,y]))\n",
     "# print(t.gradient(f,[x,y]))   #uncomment this line to see the error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By default, the context will only keep track of the **variables** but not the tensors, meaning that we can oly ask for gradients with respect to the variables by default (throught the `watch_accessed_variables` argument which defaults to `True`). But we can explicitly ask the tape to <font color=red>watch</font> things for us."
    ]
   },
   {
@@ -1660,17 +1688,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "multiple tapes"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(4.0, shape=(), dtype=float32)\n",
+      "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "## we can create a persistent gradient tape object to compute\n",
     "## multiple gradients and manually release the resources\n",
@@ -1681,12 +1711,17 @@
     "with tf.GradientTape(persistent=True) as tape:\n",
     "    f = x*x+y*y\n",
     "\n",
-    "dfdx = tape.gradient(f,x)\n",
-    "dfdx2 = tape.gradient(dfdx,x)\n",
-    "print(dfdx)\n",
-    "print(dfdx2)\n",
+    "print(tape.gradient(f,x))\n",
+    "print(tape.gradient(f,y))\n",
     "\n",
     "del tape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "multiple tapes"
    ]
   },
   {
